# Diggler

./: .gitignore  .gitmodules  AABB.hpp  Arr3Utils.hpp  AtlasCreator.cpp  AtlasCreator.hpp  Audio.cpp  Audio.hpp  Blocks.cpp  Blocks.hpp  CMakeLists.txt  CODE_OF_CONDUCT.md  Camera.hpp  CaveGenerator.cpp  CaveGenerator.hpp  Chatbox.cpp  Chatbox.hpp  Chunk.cpp  Chunk.hpp  ChunkChangeHelper.cpp  ChunkChangeHelper.hpp  Clouds.cpp  Clouds.hpp  Config.hpp  Entity.hpp  EscMenu.cpp  EscMenu.hpp  FBO.cpp  FBO.hpp  Font.cpp  Font.hpp  Frustum.cpp  Frustum.hpp  GLFWHandler.cpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  GameWindow.cpp  GameWindow.hpp  (+47 more)
assets/: 04b08.png.fdf  2d.f.glsl  2d.v.glsl  2dColored.f.glsl  2dColored.v.glsl  2dTextured.f.glsl  2dTexturedColored.f.glsl  2dTexturedColored.v.glsl  3d.f.glsl  3d.v.glsl  3dColored.v.glsl  3dTextured.f.glsl  bloom.f.glsl  (+14 more)
enet/: CMakeLists.txt
ext/enet/: CMakeLists.txt
ext/etc/: CMakeLists.txt  MurmurHash2.h  fasthash.c  fasthash.h  stb_image.h  stb_vorbis.h
ext/lua/: CMakeLists.txt
ext/lzfx/: CMakeLists.txt  lzfx.c
ext/lzo/: CMakeLists.txt
lua/: CMakeLists.txt
lzfx/: CMakeLists.txt
src/: .gitignore  AABB.cpp  AABB.hpp  Audio.cpp  Audio.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CaveGenerator.cpp  CaveGenerator.hpp  Chatbox.cpp  Chatbox.hpp  Chunk.cpp  Chunk.hpp  Clouds.cpp  Clouds.hpp  Config.cpp  Config.hpp  ConnectingState.cpp  ConnectingState.hpp  Datree.cpp  Datree.hpp  Entity.hpp  EscMenu.cpp  EscMenu.hpp  FBO.cpp  FBO.hpp  Font.hpp  Frustum.cpp  Frustum.hpp  GLFWHandler.cpp  GLFWHandler.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  GameWindow.cpp  GameWindow.hpp  GlUtils.cpp  GlUtils.hpp  (+46 more)
src/content/: Asset.cpp  Asset.hpp  AssetContentMetadata.cpp  AssetContentMetadata.hpp  AssetManager.cpp  AssetManager.hpp  BlockDef.hpp  CMakeLists.txt  Content.hpp  Mod.hpp  ModManager.cpp  ModManager.hpp  ObjectDef.hpp  Registry.cpp  Registry.hpp
src/content/audio/formats/: CMakeLists.txt
src/content/audio/formats/vorbis/: CMakeLists.txt
src/content/font/: CMakeLists.txt
src/content/font/formats/: CMakeLists.txt
src/content/font/formats/bdf/: BDFLoader.cpp  CMakeLists.txt
src/content/font/formats/bmfont/: CMakeLists.txt
src/content/image/: CMakeLists.txt  ImageFormat.hpp  ImageLoader.cpp  ImageLoader.hpp
src/content/image/formats/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp  STBImageLoader.cpp  STBImageLoader.hpp
src/content/image/formats/flif/: CMakeLists.txt  FLIFLoader.cpp  FLIFLoader.hpp
src/content/image/formats/jpeg/: CMakeLists.txt  JPEGLoader.cpp  JPEGLoader.hpp  JPEGLoader.stbi.cpp
src/content/image/formats/png/: CMakeLists.txt  PNGLoader.cpp  PNGLoader.hpp  PNGLoader.stbi.cpp
src/content/texture/: CMakeLists.txt  TextureLoader.cpp  TextureLoader.hpp
src/crypto/: CryptoData.hpp  DiffieHellman.hpp  Random.hpp  SHA256.hpp  Sign.hpp  Sodium.hpp
src/gfx/: Command.hpp  Device.hpp  Texture.hpp
src/io/: FileStream.cpp  FileStream.hpp  MemoryStream.cpp  MemoryStream.hpp  Stream.cpp  Stream.hpp
src/network/: ClientMessageHandler.cpp  ClientMessageHandler.hpp  NetHelper.cpp  NetHelper.hpp  Network.cpp  Network.hpp
src/network/client/: BlockUpdateHandler.cpp  BlockUpdateHandler.hpp  ChatHandler.cpp  ChatHandler.hpp  ChunkTransferHandler.cpp  ChunkTransferHandler.hpp  ContentHandler.cpp  ContentHandler.hpp  Handler.hpp  PlayerJoinHandler.cpp  PlayerJoinHandler.hpp  PlayerQuitHandler.cpp  PlayerQuitHandler.hpp  PlayerUpdateHandler.cpp  PlayerUpdateHandler.hpp
src/network/msgtypes/: BlockUpdate.cpp  BlockUpdate.hpp  Chat.cpp  Chat.hpp  ChunkTransfer.cpp  ChunkTransfer.hpp  ConnectionParam.cpp  ConnectionParam.hpp  Content.cpp  Content.hpp  MsgType.hpp  PlayerJoin.cpp  PlayerJoin.hpp  PlayerUpdate.cpp  PlayerUpdate.hpp  ServerInfo.cpp  ServerInfo.hpp
src/platform/: BuildInfo.hpp  Endian.hpp  FastRand.cpp  FastRand.hpp  Fixes.glibc.hpp  Fixes.hpp  Fixes.windows.hpp  FourCC.hpp  MatTypes.hpp  Math.hpp  PreprocUtils.hpp  Types.hpp  VecTypes.hpp  fs.cpp  fs.hpp
src/platform/types/: mat2.hpp  mat3.hpp  mat4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/render/: CMakeLists.txt  FontRenderer.hpp  FontRendererFwd.hpp  ParticlesRenderer.hpp  RenderParams.hpp  Renderer.hpp  TextureManager.hpp  WorldRenderer.hpp
src/render/gl/: CMakeLists.txt  Debug.cpp  Debug.hpp  DelegateGL.cpp  DelegateGL.hpp  FBO.cpp  FBO.hpp  FeatureSupport.cpp  FeatureSupport.hpp  FontRenderer.cpp  FontRenderer.hpp  OpenGL.cpp  OpenGL.glad.cpp  OpenGL.glbinding.cpp  OpenGL.glew.cpp  OpenGL.hpp  OpenGL.libepoxy.cpp  ParticlesRenderer.cpp  ParticlesRenderer.hpp  Program.cpp  Program.hpp  ProgramManager.cpp  ProgramManager.hpp  README.glad.md  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Util.cpp  Util.hpp  VAO.hpp  VBO.cpp  VBO.hpp  WorldRenderer.cpp  WorldRenderer.hpp
src/render/vk/: CMakeLists.txt
src/scripting/: CMakeLists.txt
src/scripting/lua/: CMakeLists.txt  State.cpp  State.hpp
src/scripting/lua/api/content/: BlockDef.code.h  BlockDef.h  Registry.code.h  Registry.cpp  Registry.h
src/states/: ConnectingState.cpp  ConnectingState.hpp  GameState.cpp  GameState.hpp  MessageState.cpp  MessageState.hpp  State.hpp  UITestState.cpp  UITestState.hpp
src/ui/: Button.cpp  Button.hpp  Element.cpp  Element.hpp  Font.cpp  Font.hpp  FontManager.cpp  FontManager.hpp  Manager.cpp  Manager.hpp  README.md  Rect.hpp  Text.cpp  Text.hpp
src/util/: AtlasCreator.cpp  AtlasCreator.hpp  BitmapDumper.cpp  BitmapDumper.hpp  CMakeLists.txt  ColorUtil.cpp  ColorUtil.hpp  Encoding.cpp  Encoding.hpp  Jemalloc.hpp  Log.cpp  Log.hpp  MemoryTracker.cpp  MemoryTracker.disabled.cpp  MemoryTracker.hpp  Memset.hpp  StringUtil.cpp  StringUtil.hpp  TexturePacker.cpp  TexturePacker.hpp  Tipsify.cpp  Tipsify.hpp  Worker.hpp  WorkerPool.hpp  unique_function.hpp
src/util/logging/: AnsiConsoleLogger.cpp  AnsiConsoleLogger.hpp  LogInput.cpp  LogInput.hpp  Logger.cpp  Logger.hpp  StdoutLogger.cpp  StdoutLogger.hpp
src/world/: CMakeLists.txt  Emerger.cpp  Emerger.hpp
(+38 files in other folders)
