cmake_minimum_required(VERSION 2.6)

project(lzfx)
set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3")

set(LZFX_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(LZFX_INCLUDE_DIR ${LZFX_INCLUDE_DIR} PARENT_SCOPE)
add_library(lzfx STATIC lzfx.c)