if(NOT DEFINED SRCS)
  message(FATAL_ERROR "Please compile using the repo's root CMakeLists.txt")
endif()

add_subdirectory("render")
add_subdirectory("scripting")

set(CSD ${CMAKE_CURRENT_SOURCE_DIR})
set(SRCS
  ${SRCS}
  ${CSD}/AABB.cpp
  ${CSD}/Audio.cpp
  ${CSD}/Camera.cpp
  ${CSD}/CaveGenerator.cpp
  ${CSD}/Chatbox.cpp
  ${CSD}/Chunk.cpp
  ${CSD}/Clouds.cpp
  ${CSD}/Config.cpp
  ${CSD}/content/AssetManager.cpp
  ${CSD}/content/ModManager.cpp
  ${CSD}/content/Registry.cpp
  ${CSD}/EscMenu.cpp
  ${CSD}/Frustum.cpp
  ${CSD}/Game.cpp
  ${CSD}/GameState.cpp
  ${CSD}/GameWindow.cpp
  ${CSD}/GLFWHandler.cpp
  ${CSD}/GlobalProperties.cpp
  ${CSD}/io/FileStream.cpp
  ${CSD}/io/MemoryStream.cpp
  ${CSD}/io/Stream.cpp
  ${CSD}/KeyBinds.cpp
  ${CSD}/LocalPlayer.cpp
  ${CSD}/main.cpp
  ${CSD}/MessageState.cpp
  ${CSD}/network/msgtypes/BlockUpdate.cpp
  ${CSD}/network/msgtypes/Chat.cpp
  ${CSD}/network/msgtypes/ChunkTransfer.cpp
  ${CSD}/network/msgtypes/ConnectionParam.cpp
  ${CSD}/network/msgtypes/PlayerJoin.cpp
  ${CSD}/network/msgtypes/PlayerUpdate.cpp
  ${CSD}/network/msgtypes/ServerInfo.cpp
  ${CSD}/network/ClientMessageHandler.cpp
  ${CSD}/network/NetHelper.cpp
  ${CSD}/network/Network.cpp
  ${CSD}/Particles.cpp
  ${CSD}/platform/FastRand.cpp
  ${CSD}/platform/fs.cpp
  ${CSD}/Platform.cpp
  ${CSD}/Player.cpp
  ${CSD}/PlayerList.cpp
  ${CSD}/Server.cpp
  ${CSD}/Skybox.cpp
  ${CSD}/SoundBuffer.cpp
  ${CSD}/Sound.cpp
  ${CSD}/Texture.cpp
  ${CSD}/ui/Button.cpp
  ${CSD}/ui/Element.cpp
  ${CSD}/ui/Font.cpp
  ${CSD}/ui/FontManager.cpp
  ${CSD}/ui/Manager.cpp
  ${CSD}/UITestState.cpp
  ${CSD}/ui/Text.cpp
  ${CSD}/Universe.cpp
  ${CSD}/util/BitmapDumper.cpp
  ${CSD}/util/TexturePacker.cpp
  ${CSD}/util/Tipsify.cpp
  ${CSD}/World.cpp
  PARENT_SCOPE
)
